# CafeVibe

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
src/: audio-engine.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
