[package]
name = "cafevibe"
version = "0.1.0"
description = "CafeVibe — 氛围感音乐变奏与咖啡馆背景音生成器"
authors = ["CafeVibe"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
